--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "name": "runClient",
       "request": "launch",
       "mainClass": "net.minecraftforge.userdev.LaunchTesting",
-      "projectName": "forge-1.16.5-36.0.14-mdk",
+      "projectName": "RaptureInnovations",
       "cwd": "${workspaceFolder}\\run",
       "vmArgs": "-Dforge.logging.console.level\u003ddebug -Dforge.logging.markers\u003dSCAN,REGISTRIES,REGISTRYDUMP -XX:HeapDumpPath\u003dMojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump \"-Dos.name\u003dWindows 10\" -Dos.version\u003d10.0",
       "args": "",
@@ -28,10 +28,10 @@
       "name": "runData",
       "request": "launch",
       "mainClass": "net.minecraftforge.userdev.LaunchTesting",
-      "projectName": "forge-1.16.5-36.0.14-mdk",
+      "projectName": "RaptureInnovations",
       "cwd": "${workspaceFolder}\\run",
       "vmArgs": "-Dforge.logging.console.level\u003ddebug -Dforge.logging.markers\u003dSCAN,REGISTRIES,REGISTRYDUMP",
-      "args": "--mod examplemod --all --output E:\\grim.projects\\forge-1.16.5-36.0.14-mdk\\src\\generated\\resources --existing E:\\grim.projects\\forge-1.16.5-36.0.14-mdk\\src\\main\\resources",
+      "args": "--mod examplemod --all --output C:\\Users\\silen\\Documents\\GitHub\\RaptureInnovations\\src\\generated\\resources --existing C:\\Users\\silen\\Documents\\GitHub\\RaptureInnovations\\src\\main\\resources",
       "env": {
         "MOD_CLASSES": "examplemod%%${workspaceFolder}\\bin\\main;examplemod%%${workspaceFolder}\\bin\\main",
         "MCP_MAPPINGS": "snapshot_20201028-1.16.3",
@@ -47,7 +47,7 @@
       "name": "runServer",
       "request": "launch",
       "mainClass": "net.minecraftforge.userdev.LaunchTesting",
-      "projectName": "forge-1.16.5-36.0.14-mdk",
+      "projectName": "RaptureInnovations",
       "cwd": "${workspaceFolder}\\run",
       "vmArgs": "-Dforge.logging.console.level\u003ddebug -Dforge.logging.markers\u003dSCAN,REGISTRIES,REGISTRYDUMP",
       "args": "",
