Add Mantle for deferred registration

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,18 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
+repositories {
+    mavenLocal()
+    maven { // Forge
+        name 'ForgeFS'
+        url 'https://files.minecraftforge.net/maven'
+    }
+    maven { // Mantle
+        name 'DVS1 Maven FS'
+        url 'https://dvs1.progwml6.com/files/maven'
+    }
+}
+
 version = '1.0'
 group = 'com.bfl'
 archivesBaseName = 'RaptureInnovations'
@@ -97,6 +109,7 @@ dependencies {
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
+    compile fg.deobf("slimeknights.mantle:Mantle:${minecraft_version}-${mantle_version}")
 
     // Real examples
     // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
