--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Minecraft Version Information
+minecraft_version=1.16.5
+
+# Build Dependencies
+mantle_version=1.6.79
