--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -39,8 +39,9 @@ A handfull'a hellfire throbbin' amongst the corn in the maze of a farmer's intui
 
 What will you do?
 '''
+
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
+[[dependencies.raptureinnovations]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -51,11 +52,20 @@ What will you do?
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
+
 # Here's another dependency
-[[dependencies.examplemod]]
+[[dependencies.raptureinnovations]]
     modId="minecraft"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
     versionRange="[1.16.5,1.17)"
+    ordering="NONE"
+    side="BOTH"
+
+# We use Mantle for Deferred Registration
+[[dependencies.raptureinnovations]]
+    modId="mantle"
+    mandatory=true
+    versionRange="[1.6.79,)"
     ordering="NONE"
     side="BOTH"
